Fix to work on Oracle Java 7